--- a/quoraBlog/templates/index.html
+++ b/quoraBlog/templates/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Somaiya Quora</title>
+  <title>Somaiya Talks</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -63,7 +63,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex justify-content-center align-items-center">
     <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Somaiya Quora</h1>
+      <h1 style="color: #5fcf80;">Somaiya Talks</h1>
       <h2>Get all your doubts and queries cleared!</h2>
     </div>
   </section><!-- End Hero -->
@@ -77,7 +77,7 @@
         <div class="row">
           <div class="col-lg-4 d-flex align-items-stretch">
             <div class="content">
-              <h3>Why use Somaiya Quora communities?</h3>
+              <h3>Why use Somaiya Talks communities?</h3>
               <p>
                 Connect with peers and faculties from all the branches and get your doubts cleared!
               </p>
@@ -108,6 +108,33 @@
                     <p>The good old fashioned science of machines and how things work!</p>
                   </div>
                 </div>
+                
+              </div>
+            </div><!-- End .content-->
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          
+          <div class="col-lg-8 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="icon-boxes d-flex flex-column justify-content-center">
+              <div class="row">
+                <div class="col-xl-4 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <i class="bx bx-receipt"></i>
+                    <h4>Electronics and Telecom</h4>
+                    <p>Electronics and Telecom engineering deals with the reception fo video, microprocessors etc.</p>
+                  </div>
+                </div>
+                <div class="col-xl-4 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <i class="bx bx-cube-alt"></i>
+                    <h4>Electronics</h4>
+                    <p>Electronic engineering is an electrical engineering discipline which utlizes non linear and active electrical components</p>
+                  </div>
+                </div>
+                
+                
               </div>
             </div><!-- End .content-->
           </div>
@@ -117,7 +144,7 @@
     </section><!-- End Why Us Section -->
 
     <!-- ======= Features Section ======= -->
-    <section id="features" class="features">
+    <!-- <section id="features" class="features">
       <div class="container" data-aos="fade-up">
 
         <div class="row" data-aos="zoom-in" data-aos-delay="100">
@@ -138,7 +165,7 @@
         </div>
 
       </div>
-    </section><!-- End Features Section -->
+    </section>End Features Section -->
 
   </main><!-- End #main -->
 
@@ -150,7 +177,7 @@
       <div class="row">
 
         <div class="col-lg-3 col-md-6 footer-contact">
-          <h3>Somiya Quora</h3>
+          <h3>Somaiya Talks</h3>
           <p>
             KJ Somaiya College of Engineering <br>
             Ghatkopar, Mumbai<br>
