--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -118,7 +118,7 @@
         }
     </style>
     <head>
-        <title>Somaiya Quora login</title>
+        <title>Login</title>
         <!-- <link rel="stylesheet" type="text/css" href="{% static 'static/css/login.css' %}"> -->
     </head>
     <body>
@@ -127,7 +127,7 @@
                 <div class="button-box">
                     <div id="btn"></div>
                     <button type="button" class="toggle-btn" onclick="login()">Login</button>
-                    <button type="button" class="toggle-btn" > <a href="{% url 'register' %}"></a> Register</button>
+                    <button type="button" class="toggle-btn" > <a href="{% url 'register' %}"> Register</a></button>
                 </div>
                 <!-- <div class="social-icons">
                     <img src="{% static 'img/fb.png' %}" alt="fbicon">
