--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -127,7 +127,7 @@
                 <div class="button-box">
                     <div id="btn"></div>
                     <button type="button" class="toggle-btn" onclick="login()">Register</button>
-                    <button type="button"  class="toggle-btn" onclick="register()">Login</button>
+                    <button type="button"  class="toggle-btn" onclick="register()"><a href="{% url 'login' %}"> Login</a></button>
                 </div>
                 <!-- <div class="social-icons">
                     <img src="{% static 'img/fb.png' %}" alt="fbicon">
