--- a/quoraBlog/templates/quoraBlog/post_detail.html
+++ b/quoraBlog/templates/quoraBlog/post_detail.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Somaiya Quora</title>
+  <title>Somaiya Talks </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -89,6 +89,7 @@
                 <div class="trainer-profile d-flex align-items-center">
                   <img src="{% static 'img/trainer-1.jpg' %}" class="img-fluid" alt="">
                   <span>{{ post.author }}</span>
+
                 </div>
                 
               </div>
@@ -145,7 +146,7 @@
       <div class="row">
 
         <div class="col-lg-3 col-md-6 footer-contact">
-          <h3>Somiya Quora</h3>
+          <h3>Somaiya Talks</h3>
           <p>
             KJ Somaiya College of Engineering <br>
             Ghatkopar, Mumbai<br>
