--- a/quoraBlog/templates/txt_sum.html
+++ b/quoraBlog/templates/txt_sum.html
@@ -112,7 +112,7 @@
       <div class="row">
 
         <div class="col-lg-3 col-md-6 footer-contact">
-          <h3>Somiya Quora</h3>
+          <h3>Somaiya Talks</h3>
           <p>
             KJ Somaiya College of Engineering <br>
             Ghatkopar, Mumbai<br>
