--- a/quoraBlog/templates/quoraBlog/post_confirm_delete.html
+++ b/quoraBlog/templates/quoraBlog/post_confirm_delete.html
@@ -47,6 +47,7 @@
             <li><a href="{% url 'profile' %}">Profile</a></li>
             <li><a href="{% url 'blogs' %}">Blogs</a></li>
             <li class="active"><a href="{% url 'post-create' %}">Post</a></li>
+            <li><a href="{% url 'my-blogs' %}">MyBlogs</a></li>
             <li ><a href="{% url 'txt_sum' %}">TxtSum</a></li>
             <li><a href="{% url 'logout' %}">Logout</a></li>
           {% else %}
