--- a/quoraBlog/templates/quoraBlog/post_detail.html
+++ b/quoraBlog/templates/quoraBlog/post_detail.html
@@ -45,10 +45,10 @@
         <ul>
           {% if user.is_authenticated %}
           <li><a href="{% url 'home' %}">Home</a></li>
-
             <li><a href="{% url 'profile' %}">Profile</a></li>
             <li class="active"><a href="{% url 'blogs' %}">Blogs</a></li>
             <li ><a href="{% url 'post-create' %}">Post</a></li>
+            <li><a href="{% url 'my-blogs' %}">MyBlogs</a></li>
             <li ><a href="{% url 'txt_sum' %}">TxtSum</a></li>
             <li><a href="{% url 'logout' %}">Logout</a></li>
           {% else %}
