--- a/quoraBlog/templates/quoraBlog/post_detail.html
+++ b/quoraBlog/templates/quoraBlog/post_detail.html
@@ -90,6 +90,12 @@
                   <img src="{% static 'img/trainer-1.jpg' %}" class="img-fluid" alt="">
                   <span>{{ post.author }}</span>
 
+
+                </div>
+                <div class="trainer-rank d-flex align-items-center">
+                  
+                  <i class="bx bx-heart"></i>&nbsp;<span> {{ post.likes.count }}</span>
+
                 </div>
                 
               </div>
@@ -100,7 +106,7 @@
         <div class="column">
         {% if object.author == user %}
           <div style="padding: 20px;">
-            <a class="btn btn-secondary btn-sm mt-1 mb-1"  href="{% url 'post-update' object.id %}">Update</a>
+            <a class="btn btn-secondary btn-sm mt-1 mb-1"  href="{% url 'post-update' object.id %}">Update</a>&nbsp;&nbsp;
             <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' object.id %}">Delete</a>
           </div>
         {% endif %}
@@ -124,10 +130,10 @@
           <form action="{% url 'like_post' post.pk %}" method="POST">
             {% csrf_token %}
             <button type="submit" name="post_id" value="{{ post.id }}" style="color: white; background-color: rgb(30, 90, 255); border-style: none; border-radius: 4px;">Like</button>
-          </form>
+          </form>&nbsp;&nbsp;
           <form action="{% url 'report_post' post.pk %}" method="POST" style="margin-left: 5px;">
             {% csrf_token %}
-            <button id="report" type="submit" name="report" value="{{ post.id }}" style="color: white; background-color: red; border-style: none; border-radius: 4px;">report</button>
+            <button id="report" type="submit" name="report" value="{{ post.id }}" style="color: white; background-color: red; border-style: none; border-radius: 4px;">Report</button>
           </form>
         </div>
         <br>
